# app/serializers/library/book_blueprint.rb
@@ -1,0 +1,7 @@
+module Library
+  class BookBlueprint < Blueprinter::Base
+    identifier :id
+
+    fields :serial_number, :title, :author
+  end
+end
