# db/schema.rb
@@ -10,9 +10,18 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_02_16_040451) do
+ActiveRecord::Schema[8.1].define(version: 2026_02_16_050000) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
+
+  create_table "books", id: :uuid, default: -> { "uuidv7()" }, force: :cascade do |t|
+    t.string "author", null: false
+    t.datetime "created_at", null: false
+    t.string "serial_number", null: false
+    t.string "title", null: false
+    t.datetime "updated_at", null: false
+    t.index ["serial_number"], name: "index_books_on_serial_number", unique: true
+  end
 
   create_table "readers", id: :uuid, default: -> { "uuidv7()" }, force: :cascade do |t|
     t.datetime "created_at", null: false
